unpackaged/main/default/objects/Quarterly_File__c/Quarterly_File__c.object-meta.xml
<CustomObject>
    <description>Quarterly files used in payroll audit workflow (all quarterly files are related to a payroll audit)</description>
    <label>Quarterly File</label>
    <nameField>
        <displayFormat>Quarter-{00000000}</displayFormat>
        <label>Quarterly File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>