unpackaged/main/default/objects/Quarterly_File__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>Company id passed by S3 file</description>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>