unpackaged/main/default/objects/Quarterly_File__c/fields/Quarterly_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Taxes__c</fullName>
    <description>Quarterly taxes passed by S3 file</description>
    <label>Quarterly Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>