unpackaged/main/default/objects/Quarterly_File__c/fields/Updated_Quarterly_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Updated_Quarterly_Taxes__c</fullName>
    <label>Updated Quarterly Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>